# fastapi_sqlalchemy_mysql

./: README.md  pyproject.toml  requirements.txt
