[project]
name = "fastapi_sqlalchemy_mysql"
version = "0.0.1"
description = "fastapi sqlalcehmy with mysql"
authors = [
    {name = "Wu Clan", email = "jianhengwu0407@gmail.com"},
]
dependencies = [
    "alembic>=1.13.0",
    "asyncmy>=0.2.9",
    "bcrypt>=4.1.0",
    "cryptography>=42.0.0",
    "email_validator>=2.1.0",
    "fast-captcha>=0.3.0",
    "fastapi[all]>=0.111.0",
    "fastapi-limiter>=0.1.6",
    "fastapi-pagination>=0.12.24",
    "loguru>=0.7.0",
    "path>=16.14.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=5.0.0",
    "SQLAlchemy>=2.0.30",
    "tzdata>=2024.1",
    "sqlalchemy-crud-plus>=1.6.0",
    "pwdlib>=0.2.1",
    "msgspec>=0.18.6",
    "greenlet>=3.2.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
lint = [
    "pre-commit>=4.0.0",
]
server = [
    "gunicorn>=21.2.0",
    "wait-for-it>=2.2.2",
]

[tool.uv]
package = false
python-downloads = "manual"
default-groups = ["lint"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
